--- a/layouts/reference/list.html
+++ b/layouts/reference/list.html
@@ -3,12 +3,9 @@
         <div class="row">
             <div class="col">
                 <h1>{{ .Title }}</h1>
+                <h2>Grid Layout</h2>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                {{ .Content }}
-            </div>
-        </div>
+        {{ .Content }}
     </main>
 {{ end }}
