--- a/layouts/reference/single.html
+++ b/layouts/reference/single.html
@@ -3,7 +3,7 @@
         <div class="sidebar-toc">
             {{ partial "ref-toc.html" . }}
         </div>    
-        <div class="content">
+        <div class="idl-block">
             {{ .Content }}
         </div>
     </main>
