--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,17 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/png" href="/favicon-32.png" />
+
+    <meta name="description" content="WebGPU developer's quick reference">
+
+    <!-- <link rel="icon" type="image/png" href="/favicon-32.png" /> -->
     
     <!-- Styles -->
     {{ $style := resources.Get "styles.scss" | toCSS | minify }}
     <link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
     <title>{{ block "title" . }}
-        {{- .Site.Title -}}
+        {{- .Site.Title }} - {{ .Page.Title -}}
         {{ end }}</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5GVD6TQJTW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-5GVD6TQJTW');
+    </script>
 </head>
 <body>
+    <div class="fullsize">
     {{ block "header" . }}
         {{ partial "header.html" . }}
     {{ end }}
@@ -22,5 +35,6 @@
     {{ block "footer" . }}
         {{ partial "footer.html" . }}
     {{ end }}
+    </div>
 </body>
 </html>
