--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,7 @@
 <footer class="section">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <a href="/">WebGPU.rocks</a><br>
                 <a href="mailto:janitor@webgpu.rocks">janitor@webgpu.rocks</a>
             </div>
         </div>    
