--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header class="section">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col">
                 <h1><a href="/">WebGPU.rocks</a></h1>
