--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <a href="mailto:janitor@webgpu.rocks">janitor@webgpu.rocks</a>
+                <a href="mailto:janitor@webgpu.rocks">janitor@webgpu.rocks</a> / Last updated: {{ now.Format "Jan 2, 2006" }}
             </div>
         </div>    
     </div>
