updated site title

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="description" content="{{ .Page.Title }} quick reference and documentation">
+    <meta name="description" content="{{ .Page.Title }} - WebGPU quick reference and documentation">
 
     <!-- <link rel="icon" type="image/png" href="/favicon-32.png" /> -->
     
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
     <title>{{ block "title" . }}
-        {{ .Page.Title -}} - {{- .Site.Title }}
+        {{ .Page.Title }} - WebGPU quick reference and documentation
         {{ end }}</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
