--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -6,7 +6,7 @@
 @import "./bootstrap/bootstrap-reboot";
 @import "./bootstrap/bootstrap-grid";
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700&display=swap');
 //@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,700;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
@@ -85,7 +85,7 @@ button, input {
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background-color: $color-background-darker;
+    background-color: $color-background-dark;
 }
 ::-webkit-scrollbar-thumb {
     background-color: $color-background-lighter;
@@ -94,11 +94,6 @@ button, input {
 ////////////////////////////////////////////////////////////////////////////////
 
 .section {
-    padding: 0 0.5em;
-
-    a:hover {
-        color: $color-primary;
-    }
 }
 
 header {
@@ -109,23 +104,25 @@ header {
         align-items: center;
         justify-content: space-between;
     }
-    .header-brand {
-        margin: 1em 0;
+    .header-logo img {
+        margin: 0.8em 0;
+        height: 2em;
+    }
+    .header-logo {
+        margin-right: 2em;
+    }
+    .header-item {
+        margin: 0.4em 0.5em 0 0.5em;
+        color: $color-text-darker;
+        font-size: 1em;
+        font-weight: 400;
     }
     .header-icon svg {
         fill: $color-text-darker;
         height: 2em;
     }
-
-    h1 {
-        margin: 0;
-        color: $color-title;
-        font-size: 2em;
-        font-weight: bold;
-
-        a {
-            color: inherit;
-        }
+    .spacer {
+        flex-grow: 1;
     }
 }
 
@@ -210,7 +207,7 @@ main {
 .sidebar-toc {
     overflow: hidden auto;
     flex: 0 0 auto;
-    width: 15em;
+    width: 16em;
     background-color: $color-background;
     font-size: 0.95rem;
 
